# sharpen-llm

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  test_groq_api.py
bootcamp/: config.py  count_tokens.py  groq_client.py  llm_api_client.py  ollama_client.py
bootcamp/build_ai_products/ai_toolkit/: memory.py  question.py  retrieval.py  structured_output.py  tools.py
bootcamp/evaluation/: add_dataset.py  add_prompts.py  evaluate_email_summaries.py  evaluate_news.py  metrics.py  tracing.py
data/: email-summaries.parquet
notebooks/: datasets.ipynb  groq_prompts.py  large-language-models-101.ipynb  write-great-prompts.ipynb
