[project]
name = "bootcamp"
version = "0.1.0"
description = "Materials for the MLExpert.io Bootcamp"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2024.11.0",
    "jupyterlab>=4.3.5",
    "litellm>=1.61.19",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "ollama>=0.4.7",
    "openai>=1.64.0",
    "opik>=1.5.2",
    "pandas>=2.2.3",
    "pre-commit>=4.1.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "ruff>=0.9.7",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.setuptools]
packages = ["bootcamp"]
